QA issues: fixed many issue with redirect on mobile, upload file name, hidden error message on  on confirm passowrd

--- a/src/material.scss
+++ b/src/material.scss
@@ -30,3 +30,7 @@
 @include mat.progress-spinner-overrides((
     active-indicator-color: variables.$red-650
 ));
+
+.mat-mdc-input-element, .mat-mdc-floating-label {
+    @apply font-sans !important;
+}
